--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,9 @@ jobs:
   my-job:
     runs-on: ubuntu-latest
     steps:
-      - name: build
-        run: echo "Hello World"
-
+    - name: Checkout sources
+      uses: actions/checkout@v4
+    - name: Setup Gradle
+      uses: gradle/gradle-build-action@v3
+    - name: Build with Gradle
+      run: ./gradlew build
