--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,8 +10,6 @@ jobs:
       uses: actions/checkout@v4
     - name: Setup Gradle
       uses: gradle/gradle-build-action@v3
-    - name: Build with Gradle
-      run: gradle nativeCompile
     - name: native compile
       uses: graalvm/setup-graalvm@v1
       with:
@@ -20,6 +18,7 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
     - name: Example step
       run: |
+        gradle nativeCompile
         echo "GRAALVM_HOME: $GRAALVM_HOME"
         echo "JAVA_HOME: $JAVA_HOME"
         java --version
