--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,9 +13,11 @@ jobs:
     - name: native compile
       uses: graalvm/setup-graalvm@v1
       with:
-          java-version: '21'
-          distribution: 'graalvm' # See 'Options' for all available distributions
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+        version: '22.3.2' # GraalVM version
+        components: 'native-image'
+        java-version: '11'
+        distribution: 'graalvm' # See 'Options' for all available distributions
+        github-token: ${{ secrets.GITHUB_TOKEN }}
     - name: Example step
       run: |
         echo "GRAALVM_HOME: $GRAALVM_HOME"
