--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,9 @@ jobs:
         java-version: '17'
         distribution: 'graalvm' # See 'Options' for all available distributions
         github-token: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        echo "GRAALVM_HOME: $GRAALVM_HOME"
+        echo "JAVA_HOME: $JAVA_HOME"
         java --version
         native-image --version
         gradle nativeCompile
