--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,14 +10,15 @@ jobs:
       uses: actions/checkout@v4
     - name: Setup Gradle
       uses: gradle/gradle-build-action@v3
+    - name: env
       uses: graalvm/setup-graalvm@v1
-    - name: native compile
       with:
         version: '22.2.2' # GraalVM version
         components: 'native-image'
         java-version: '17'
         distribution: 'graalvm' # See 'Options' for all available distributions
         github-token: ${{ secrets.GITHUB_TOKEN }}
+    - name: build
       run: |
         echo "GRAALVM_HOME: $GRAALVM_HOME"
         echo "JAVA_HOME: $JAVA_HOME"
