--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,6 @@ java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(17)
 //        vendor = JvmVendorSpec.GRAAL_VM
-		vendor.set(JvmVendorSpec.matching("Oracle")) 
+		vendor.set(JvmVendorSpec.matching("GraalVM")) 
     }
 }
