Minor changes (untested)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,29 +6,17 @@ jobs:
   build-java:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout sources
-      uses: actions/checkout@v4
-    - name: Setup Gradle
-      uses: gradle/gradle-build-action@v3
-    - name: env
-      uses: graalvm/setup-graalvm@v1
-      with:
-        version: '22.2.2' # GraalVM version
-        components: 'native-image'
-        java-version: '17'
-        distribution: 'graalvm' # See 'Options' for all available distributions
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-    - name: build
-      run: |
-        echo "GRAALVM_HOME: $GRAALVM_HOME"
-        echo "JAVA_HOME: $JAVA_HOME"
-        java --version
-        gu install native-image
-        native-image --version
-        ./gradlew -q javaToolchains
-        ./gradlew nativeCompile
-    - name: Find all files
-      run: find build/
-
-
-
+      - uses: actions/checkout@v4
+      - uses: graalvm/setup-graalvm@v1
+        with:
+          java-version: '21'
+          distribution: 'graalvm' # See 'Options' for all available distributions
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Example step
+        run: |
+          echo "GRAALVM_HOME: $GRAALVM_HOME"
+          echo "JAVA_HOME: $JAVA_HOME"
+          java --version
+          native-image --version
+      - name: Example step using Gradle plugin # https://graalvm.github.io/native-build-tools/latest/gradle-plugin.html
+        run: gradlew nativeCompile
