--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,8 +9,9 @@ jobs:
       - uses: actions/checkout@v4
       - uses: graalvm/setup-graalvm@v1
         with:
-          java-version: '21'
-          distribution: 'graalvm' # See 'Options' for all available distributions
+          java-version: '17'
+          distribution: 'graalvm-community'
+          components: 'native-image'
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Example step
         run: |
