--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,7 +58,7 @@ jobs:
         run: gradle nativeCompile
       - name: Find all files
         run: |
-            find build/
+            find build
       - name: rename
         run: |
             mv ./build//native/nativeCompile/github_workflow_action_tutorial.java ${{ matrix.binary }}
