--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
       # Set fail-fast to false to ensure that feedback is delivered for all matrix combinations. Consider changing this to true when your workflow is stable.
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [windows-latest, ubuntu-latest, macos-latest]
         build_type: [Release]
         include:
           - os: windows-latest
@@ -53,12 +53,12 @@ jobs:
           native-image --version
       - name: native image
         run: gradle nativeCompile
-#      - name: Find all files
-#        run: |
-#            find build
+      - name: Find all files
+        run: |
+            find build
       - name: rename
         run: |
-            mv ./build//native/nativeCompile/github_workflow_action_tutorial.java ${{ matrix.binary }}
+            mv ./build/native/nativeCompile/github_workflow_action_tutorial.java ${{ matrix.binary }}
       - name: run
         run: |
             ${{ matrix.binary }}
