--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,5 +75,6 @@ jobs:
         with:
           upload_url: ${{ needs.create_release.outputs.upload_url }}
           asset_path: ${{ matrix.binary }}
-          asset_name: hello.${{ matrix.os }}.${{ matrix.c_compiler }}
+          #asset_name: hello.${{ matrix.os }}.${{ matrix.c_compiler }}
+          asset_name: ${{ matrix.binary }}
           asset_content_type: application/octet-stream
