--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.run_id }}
-          release_name: Release ${{ github.run_id }}
+          release_name: Release ${{ github.run_id }} ${{ env.date }}
 
   build-java:
     needs: create_release
