--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,9 +64,9 @@ jobs:
         shell: bash
         run: |
             mv ${{ matrix.output }}  ${{ matrix.binary }}
-      - name: run
+      - name: run program
         run: |
-            ${{ matrix.binary }}
+            ./${{ matrix.binary }}
 
       - name: Upload
         uses: actions/upload-release-asset@v1
@@ -74,7 +74,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ needs.create_release.outputs.upload_url }}
-          asset_path: ${{ matrix.binary }}
+          asset_path: ./${{ matrix.binary }}
           #asset_name: hello.${{ matrix.os }}.${{ matrix.c_compiler }}
           asset_name: ${{ matrix.binary }}
           asset_content_type: application/octet-stream
